use user auth for fetchTeamSchedule
